# khushi

./: CMakeLists.txt  README.md
include/: command_executor.h  database.h  llm.h  ollama_llm.h  stt.h  tts.h  web_search.h
models/: training_data.txt
src/: main.cpp
src/command_executor/: command_executor.cpp
src/database/: database.cpp
src/llm/: llm.cpp  ollama_llm.cpp
src/stt/: stt.cpp
src/tts/: tts.cpp
src/web_search/: web_search.cpp
